[project]
name = "dutch-maps"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Dahmen",email = "bendahmen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
